8232681: ArrayIndexOutOfBoundsException with text blocks in javac when using -Xlint
Reviewed-by: sundar